--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,28 +4,69 @@
     box-sizing: border-box;
 }
 
+.wrapper{
+padding:0% 10%;
+background-color: transparent;
+}
+
+
 header .main-menu{
-    margin: 30px;
-    height: 150px;
-    background-color: blue;
+    height: 60px;
+    background-color: navy;
     position: relative;
 }
 
-.main-menu>div.main{
+header .main-menu.clearfix::after{
+   content: "";
+   display: table;
+   clear: both;
+}
+
+
+header .main-menu>div.main{
     margin-right: 30px;
     float: left;
 }
 
-.main-menu>.second-nav{
+header .main-menu>.second-nav{
     float: right;
 }
 
 
-.main-menu li{
+header .main-menu li{
+    color: white;;
     margin: 15px 0px;
     display: inline-block;
 
 }
 
+/*-------------------------------*/
 
 
+.section-hero{
+    height:600px;
+    background-image: url("../img/background-header.png");
+    background-color: royalblue;
+}
+
+.row-hero.clerfix::after{
+    content: "";
+    display: table;
+    clear: both;
+ }
+
+
+.row-hero.clerfix::after{
+    content: "";
+    display: table;
+    clear: both;
+ }
+
+.section-hero div.hero{
+    margin-right: 4px;
+    width: 45%;
+    height: 600px;
+     background-color: seagreen;
+     float:left;
+ }
+ 
