--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10,6 +10,8 @@ background-color: transparent;
 }
 
 
+
+
 header .main-menu{
     height: 60px;
     background-color: navy;
@@ -35,7 +37,7 @@ header .main-menu>.second-nav{
 
 header .main-menu li{
     color: white;;
-    margin: 15px 0px;
+    margin: 15px 10px 15px 0px;
     display: inline-block;
 
 }
@@ -44,29 +46,116 @@ header .main-menu li{
 
 
 .section-hero{
-    height:600px;
+    height:100vh;
     background-image: url("../img/background-header.png");
     background-color: royalblue;
 }
 
-.row-hero.clerfix::after{
+.row.clerfix::after{
     content: "";
     display: table;
     clear: both;
  }
 
 
-.row-hero.clerfix::after{
-    content: "";
-    display: table;
-    clear: both;
- }
 
 .section-hero div.hero{
     margin-right: 4px;
-    width: 45%;
+    width: 800px;
     height: 600px;
-     background-color: seagreen;
-     float:left;
+    background-color: seagreen;
+    float:left;
  }
  
+
+/*-------------------------------*/
+
+.gray{
+    padding: 30px;
+    text-align: center;
+    width: 100%;
+    height: 100px;
+    background-color: darkgray;
+}
+
+
+.col3{
+    width: 30%;
+    margin: 0% 1.5%;
+    height: 700px;
+    border: 1px solid black;
+    background-color: burlywood;
+    float:left;
+
+}
+
+.col3>.img{
+    border: 1px solid black;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    left:50%;
+    transform: translate(-50%);
+}
+
+.col2,.col3{
+    position: relative;
+}
+
+
+.col3>.img img{
+   max-width: 200px;
+   max-height: 200px;
+}
+
+
+.col3>.text{
+    text-align: center;
+    position: relative;
+    top:30%;
+    left:50%;
+    transform: translate(-50%, 0% );
+}
+
+.col3>.text>hr{
+    width: 100px;
+    margin: 10px 130px 10px 130px;
+
+
+    
+}
+
+
+
+
+
+
+
+
+
+
+.col2{
+    width: 50%;
+    height: 400px;
+    border: 1px solid black;
+    background-color: burlywood;
+    float:left;
+}
+
+.col2>.img img{
+    max-height: 100%;
+ }
+
+ .col2>.img{
+    border: 1px solid black;
+    width: 100%;
+    height: 400px;
+   
+}
+
+
+
+    
+
+
+
