--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,6 +2,7 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: 'roboto';
 }
 
 .wrapper{
@@ -9,68 +10,98 @@ padding:0% 10%;
 background-color: transparent;
 }
 
+.clearfix::after{
+    content: "";
+    display: table;
+    clear: both;
+ }
+ 
 
 
+.text h3{
+    margin:40px 0;
+}
+
+hr{
+    margin: 15px;
+}
+
+
+
+
+button{
+    padding: 5px 10px ;
+    border-radius: 5px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+}
+.button.green{
+    color: white;
+    border: none;
+    background-color:  #47adf1;
+}
+
+
+
+
+.main.logo{
+    height: 100%;
+    margin-right: 30px;
+}
 
 header .main-menu{
-    height: 60px;
+
     background-color: navy;
     position: relative;
 }
 
-header .main-menu.clearfix::after{
-   content: "";
-   display: table;
-   clear: both;
-}
-
-
 header .main-menu>div.main{
-    margin-right: 30px;
+    margin-top: 5px;
+    height: 100%;
     float: left;
 }
 
 header .main-menu>.second-nav{
+    height: 100%;
     float: right;
 }
-
 
 header .main-menu li{
     color: white;;
     margin: 15px 10px 15px 0px;
     display: inline-block;
-
 }
 
 /*-------------------------------*/
 
 
-.section-hero{
-    height:100vh;
+.container-hero{
+    height:80vh;
     background-image: url("../img/background-header.png");
     background-color: royalblue;
 }
 
-.row.clerfix::after{
-    content: "";
-    display: table;
-    clear: both;
- }
 
-
-
-.section-hero div.hero{
+.container-hero div.hero{
     margin-right: 4px;
     width: 800px;
-    height: 600px;
-    background-color: seagreen;
+    height: 400px;
     float:left;
+    position: relative;
  }
  
+ 
+ .hero>.text{
+     background-color: transparent;
+     width: 600px;
+     height: 200px;
+     bottom:0px;
+     position: absolute;
+ }
 
-/*-------------------------------*/
 
-.gray{
+ .gray{
     padding: 30px;
     text-align: center;
     width: 100%;
@@ -79,66 +110,64 @@ header .main-menu li{
 }
 
 
+/*-------------------------------*/
+
+
+
+.col2,.col3{
+    height: 100%;
+    position: relative;
+}
+.row{
+    margin: 40px 0px;
+    height: 400px;
+    position: relative;
+}
+
+
+
+
 .col3{
     width: 30%;
     margin: 0% 1.5%;
-    height: 700px;
-    border: 1px solid black;
-    background-color: burlywood;
     float:left;
 
 }
 
 .col3>.img{
-    border: 1px solid black;
     width: 100%;
     height: 200px;
     position: absolute;
-    left:50%;
-    transform: translate(-50%);
 }
 
-.col2,.col3{
-    position: relative;
+.col3>.img>img{
+   position: absolute;
+   max-width: 100%;
+   max-height:100%;
+   top: 50%;
+   left:50%;
+   transform: translate(-50%,-50%);
 }
 
-
-.col3>.img img{
-   max-width: 200px;
-   max-height: 200px;
-}
-
-
-.col3>.text{
+.row .col3>.text{
     text-align: center;
     position: relative;
-    top:30%;
+    top:51%;
     left:50%;
     transform: translate(-50%, 0% );
 }
 
 .col3>.text>hr{
-    width: 100px;
     margin: 10px 130px 10px 130px;
-
-
-    
 }
-
-
-
-
-
 
 
 
 
 
 .col2{
+   
     width: 50%;
-    height: 400px;
-    border: 1px solid black;
-    background-color: burlywood;
     float:left;
 }
 
@@ -147,15 +176,19 @@ header .main-menu li{
  }
 
  .col2>.img{
-    border: 1px solid black;
     width: 100%;
-    height: 400px;
-   
+    height: 400px; 
+}
+
+.col2>.text{
+    text-align: left;
+    position: relative;
+    padding: 30px;
 }
 
 
 
-    
-
-
-
+.footer{
+    height: 200px;
+    background-color: gray
+}
