--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,7 +2,8 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    font-family: 'roboto';
+    font-family: 'Helcetica', sans-serif;
+    position: relative;
 }
 
 .wrapper{
@@ -16,19 +17,6 @@ background-color: transparent;
     clear: both;
  }
  
-
-
-.text h3{
-    margin:40px 0;
-}
-
-hr{
-    margin: 15px;
-}
-
-
-
-
 button{
     padding: 5px 10px ;
     border-radius: 5px;
@@ -36,96 +24,127 @@ button{
     background-color: transparent;
     border: 1px solid white;
 }
-.button.green{
+
+button.green{
     color: white;
     border: none;
-    background-color:  #47adf1;
+    background-color: yellowgreen;
+}
+
+.big{
+    padding: 20px 25px ;
+    font-size: 15px;
+}
+
+.help{
+    text-align: right;
+    position: fixed;
+    bottom:0%;
+    right:2%;
+    z-index: 2;
 }
 
 
 
 
-.main.logo{
-    height: 100%;
-    margin-right: 30px;
+/*stile header-*/
+
+.header {
+  font-size: 15px;
+  height: 50px;
+  background-color: #0c325a;
+  z-index: 2;
 }
 
-header .main-menu{
-
-    background-color: navy;
-    position: relative;
-}
-
-header .main-menu>div.main{
-    margin-top: 5px;
+.logo-img{
+    width: 150px;
     height: 100%;
     float: left;
-}
+    }
+    
+    .header .first-nav li, .second-nav li{
+        height: 100%;
+        color: white;
+        display: inline-block;
+        line-height: 50px;
+        float: left;
+    }
+    
+    .header .first-nav li{
+        float: left;
+        margin-right: 20px;
+    }
 
-header .main-menu>.second-nav{
-    height: 100%;
-    float: right;
-}
 
-header .main-menu li{
-    color: white;;
-    margin: 15px 10px 15px 0px;
-    display: inline-block;
-}
+    .header .second-nav li{
+        float: right;
+        margin-left: 20px;
+    }
 
-/*-------------------------------*/
+
+/*---sezione-1----------------------------*/
+
 
 
 .container-hero{
-    height:80vh;
-    background-image: url("../img/background-header.png");
-    background-color: royalblue;
+    background-color: #0c325a;
+    overflow: hidden;
+
+
 }
 
+.hero>.text{
+    background-color: transparent;
+    width: 600px;
+    height: 100%;
+    padding: 200px 0;
+    z-index: 1;
+}
 
-.container-hero div.hero{
-    margin-right: 4px;
-    width: 800px;
-    height: 400px;
-    float:left;
-    position: relative;
- }
- 
- 
- .hero>.text{
-     background-color: transparent;
-     width: 600px;
-     height: 200px;
-     bottom:0px;
-     position: absolute;
- }
+.overlay{
+    height: 90%;
+    width: 90%;
+    
+    background-image: url(../img/background-header.png);
+    background-color: transparent;
+    position: absolute;
+    left:25%;
+    bottom: -1%;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 
 
  .gray{
-    padding: 30px;
+    padding: 20px;
     text-align: center;
     width: 100%;
     height: 100px;
-    background-color: darkgray;
+    background-color: #d3d3d3;
 }
 
 
-/*-------------------------------*/
+.gray h3{
+    margin: 5px;
+}
+
+
+
+/*----sezione-2---------------------------*/
 
 
 
 .col2,.col3{
-    height: 100%;
     position: relative;
 }
 .row{
     margin: 40px 0px;
-    height: 400px;
-    position: relative;
+    overflow: hidden;
 }
 
 
 
+/*------*/
 
 .col3{
     width: 30%;
@@ -135,19 +154,22 @@ header .main-menu li{
 }
 
 .col3>.img{
-    width: 100%;
+
+    width: 300px;
     height: 200px;
-    position: absolute;
+    left:50%;
+    transform: translate(-50%, 0% );
+    margin-bottom: 30px;
 }
 
-.col3>.img>img{
-   position: absolute;
-   max-width: 100%;
-   max-height:100%;
-   top: 50%;
-   left:50%;
-   transform: translate(-50%,-50%);
+.col3 .img img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
+
+
+
 
 .row .col3>.text{
     text-align: center;
@@ -160,8 +182,6 @@ header .main-menu li{
 .col3>.text>hr{
     margin: 10px 130px 10px 130px;
 }
-
-
 
 
 
@@ -187,8 +207,43 @@ header .main-menu li{
 }
 
 
-
 .footer{
     height: 200px;
-    background-color: gray
+    background-color: #d3d3d3;
 }
+
+
+
+
+
+/*--stili di testo---------*/
+
+h1{
+    font-size: 50px;
+    margin: 30px 0px;
+    color:white;
+}
+
+.text>:nth-child(2){
+    color:gray;
+}
+
+.col3>.text>:first-child{
+    color:greenyellow;
+}
+.col3>.text>:last-child{
+    color:gray;
+}
+
+.col2>.text h3{
+    margin:40px 0;
+}
+.col2>.text h2{
+    font-size: 40px;
+}
+
+hr{
+    margin: 15px;
+}
+
+
